--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
+<!DOCTYPE html>
 <html>
-<head>
-  <title>我的简历</titel>
-</head>
-<body>
-  我的github简历
-</body>
+  <head>
+    <meta charset="utf-8">
+    <title>我的github简历</title>
+  </head>
+  <body>
+    我的github简历
+  </body>
 </html>
