--- a/index.html
+++ b/index.html
@@ -2,21 +2,151 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>我的github简历</title>
-    <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
+    <style>
+      html,body{
+        padding: 0;
+        margin: 0;
+        font-family: "Helvetica Neue",Helvetica,"PingFang SC","Hiragino Sans GB","Microsoft YaHei","微软雅黑",Arial,sans-serif;
+        font-size:16px;
+        color: #767676;
+      }
+      #resume{
+        width: 1000px;
+        margin:  0 auto;
+        margin-top: 50px;
+      }
+      .row{
+        border-radius: 15px;
+      }
+      .row .col-md-3{
+        padding: 0;
+        margin: 0;
+      }
+      .row .col-md-3 .progress{
+        margin: 0;
+        padding: 0;
+        margin-top:2px;
+      }
+      .resumeLeft{
+        height: 800px;
+        color: #FFF;
+        padding: 0;
+        margin: 0;
+      }
+      .resumeRight{
+        height: 800px;
+
+        padding: 0;
+        margin: 0;
+      }
+      .container-fluid{
+        padding: 0;
+        margin: 0;
+      }
+      #leftTop{
+        width: 100%
+      }
+      #leftCenter{
+        width: 100%
+      }
+      #leftFoot{
+        width: 100%
+      }
+      .leftcontent{
+        height: 200px;
+        width: 100%;
+        margin-bottom:15px;
+        margin-top: 10px;
+      }
+      .row .col-md-9 .panel-heading{
+        background: #dff0d8;
+      }
+      .row .col-md-3 .list-group-item{
+        border:none;
+      }
+
+
+    </style>
     <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-    <!-- 可选的 Bootstrap 主题文件（一般不用引入） -->
     <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-    <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
-    <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>      
   </head>
   <body>
-    我的github简历
-    <a class="btn btn-default" href="#" role="button">Link</a>
-    <button class="btn btn-default" type="submit">Button</button>
-    <input class="btn btn-default" type="button" value="Input">
-    <input class="btn btn-default" type="submit" value="Submit">
+      <div id="resume">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-md-3 resumeLeft">
+              <div id="leftTop">
+                  <ul class="list-group">
+                    <li class="list-group-item list-group-item-success" style="color:#333;">基本资料</li>
+                    <li class="list-group-item list-group-item-info">出生日期：--------</li>
+                    <li class="list-group-item list-group-item-info">电话：13128997421</li>
+                    <li class="list-group-item list-group-item-info">邮箱：379463001@qq.com</li>
+                  </ul>
+              </div>
+              <div id="leftFoot">
+                <ul class="list-group">
+                  <li class="list-group-item list-group-item-success" style="color:#333;">兴趣爱好</li>
+                  <li class="list-group-item list-group-item-info">我爱吃饭</li>
+                  <li class="list-group-item list-group-item-info">我爱吃饭</li>
+                  <li class="list-group-item list-group-item-info">我爱吃饭</li>
+                </ul>
+              </div>
+              <div id="leftCenter">
+                <ul class="list-group">
+                  <li class="list-group-item list-group-item-success" style="color:#333;">掌握技能</li>
+                </ul>
+                <div>
+                  <span class="label label-default" style="font-size:18px">javascript</span>
+                  <span class="label label-default" style="font-size:18px">php</span>
+                  <span class="label label-default" style="font-size:18px">vue</span>
+                  <p style="margin-top: 16px;"><span class="label label-default" style="font-size:18px">jquery</span></p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-9 resumeRight">
+              <div class="panel panel-default">
+                <div class="panel-heading" style="background-color:#3c763"><h4>李棠寅</h4></div>
+                <div class="panel-body">
+                  <div class="container-fluid">
+                    <div class="row">
+                      <div class="col-md-9" style="color:#767676">
+                        <ul>
+                          <li>我爱学习，我爱学习，我爱学习，我爱学习</li>
+                          <li>我爱学习，我爱学习，我爱学习，我爱学习</li>
+                          <li>我爱学习，我爱学习，我爱学习，我爱学习</li>
+                          <li>我爱学习，我爱学习，我爱学习，我爱学习</li>
+                        </ul>
+                      </div>
+                      <div class="col-md-3">相片</div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="panel panel-default">
+                <div class="panel-heading">项目经历</div>
+                <div class="panel-body" style="color:#767676">
+                  <ul>
+                    <li>广东爱唯视微信端公众号前端</li>
+                    <li>广东爱唯视微信端公众号前端</li>
+                    <li>广东爱唯视微信端公众号前端</li>
+                    <li>广东爱唯视微信端公众号前端</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="panel panel-default">
+                <div class="panel-heading">求职目标</div>
+                <div class="panel-body" style="color:#767676">
+                    web前端工程师
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
   </body>
 </html>
