--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
         color: #767676;
       }
       #resume{
-        width: 1000px;
         margin:  0 auto;
         margin-top: 50px;
       }
@@ -31,14 +30,11 @@
         margin-top:2px;
       }
       .resumeLeft{
-        height: 800px;
         color: #FFF;
         padding: 0;
         margin: 0;
       }
       .resumeRight{
-        height: 800px;
-
         padding: 0;
         margin: 0;
       }
@@ -55,20 +51,42 @@
       #leftFoot{
         width: 100%
       }
-      .leftcontent{
-        height: 200px;
-        width: 100%;
-        margin-bottom:15px;
-        margin-top: 10px;
-      }
-      .row .col-md-9 .panel-heading{
+      .row .col-md-5 .panel-heading{
         background: #dff0d8;
       }
       .row .col-md-3 .list-group-item{
         border:none;
       }
-
-
+      #top{
+        background-color: #2B3A42;
+        height: 80px;
+        color: #fff;
+        margin: 0 auto;
+      }
+      #foot{
+        background-color: #2B3A42;
+        color: #fff;
+        height: 250px;
+        position: fixed;
+        bottom: 0px;
+        width: 100%;
+      }
+      #logo{
+        height: 60px;
+        width: 60px;
+        line-height: 60px;
+        text-align: center;
+        font-weight: bold;
+        font-size: 20px;
+        border: 4px solid #fff;
+        margin-top: 9px;
+        float: left;
+      }
+      #logotext{
+        float: left;
+        line-height: 120px;
+        margin-left: 5px;
+      }
     </style>
     <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
@@ -76,10 +94,20 @@
 
   </head>
   <body>
+    <div id="top">
+      <div class="row">
+        <div class="col-xs-2"></div>
+        <div class="col-xs-2">
+          <div id="logo">JS</div>
+          <div id="logotext">用心前端</div>
+        </div>
+      </div>
+    </div>
       <div id="resume">
         <div class="container-fluid">
           <div class="row">
-            <div class="col-md-3 resumeLeft">
+              <div class="col-xs-2"></div>
+            <div class="col-md-2 resumeLeft">
               <div id="leftTop">
                   <ul class="list-group">
                     <li class="list-group-item list-group-item-success" style="color:#333;">基本资料</li>
@@ -108,7 +136,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-9 resumeRight">
+            <div class="col-md-5 resumeRight">
               <div class="panel panel-default">
                 <div class="panel-heading" style="background-color:#3c763"><h4>李棠寅</h4></div>
                 <div class="panel-body">
