--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         font-family: "Helvetica Neue",Helvetica,"PingFang SC","Hiragino Sans GB","Microsoft YaHei","微软雅黑",Arial,sans-serif;
         font-size:16px;
         color: #767676;
+        width: 100%;
+        height: 100%
       }
       #resume{
         margin:  0 auto;
@@ -57,7 +59,7 @@
       .row .col-md-3 .list-group-item{
         border:none;
       }
-      #top{
+      /* #top{
         background-color: #2B3A42;
         height: 80px;
         color: #fff;
@@ -70,8 +72,8 @@
         position: fixed;
         bottom: 0px;
         width: 100%;
-      }
-      #logo{
+      } */
+      /* #logo{
         height: 60px;
         width: 60px;
         line-height: 60px;
@@ -81,6 +83,11 @@
         border: 4px solid #fff;
         margin-top: 9px;
         float: left;
+      } */
+      #top{
+        height: 8%;
+        width: 100%;
+        background-color: #2B3A42;
       }
       #logotext{
         float: left;
@@ -95,13 +102,13 @@
   </head>
   <body>
     <div id="top">
-      <div class="row">
+      <!-- <div class="row">
         <div class="col-xs-2"></div>
         <div class="col-xs-2">
           <div id="logo">JS</div>
           <div id="logotext">用心前端</div>
         </div>
-      </div>
+      </div> -->
     </div>
       <div id="resume">
         <div class="container-fluid">
@@ -127,13 +134,18 @@
               <div id="leftCenter">
                 <ul class="list-group">
                   <li class="list-group-item list-group-item-success" style="color:#333;">掌握技能</li>
+                  <li class="list-group-item list-group-item-info">javascript（熟练）</li>
+                  <li class="list-group-item list-group-item-info">jquery（熟练）</li>
+                  <li class="list-group-item list-group-item-info">vue（熟练）</li>
+                  <li class="list-group-item list-group-item-info">php（初级）</li>
+                  <li class="list-group-item list-group-item-info">thinkphp（初级）</li>
                 </ul>
-                <div>
+                <!-- <div>
                   <span class="label label-default" style="font-size:18px">javascript</span>
                   <span class="label label-default" style="font-size:18px">php</span>
                   <span class="label label-default" style="font-size:18px">vue</span>
                   <p style="margin-top: 16px;"><span class="label label-default" style="font-size:18px">jquery</span></p>
-                </div>
+                </div> -->
               </div>
             </div>
             <div class="col-md-5 resumeRight">
