--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       }
       #resume{
         margin:  0 auto;
-        margin-top: 50px;
+        margin-top: 22px;
       }
       .row{
         border-radius: 15px;
@@ -88,11 +88,30 @@
         height: 8%;
         width: 100%;
         background-color: #2B3A42;
+        color: #fff;
+        position: relative;
       }
       #logotext{
         float: left;
         line-height: 120px;
         margin-left: 5px;
+      }
+      #otherLogo{
+        float: left;
+        border: 3px solid #fff;
+        padding: 5%;
+        margin-top: 4%;
+        text-align: center;
+        font-size: 25px;
+        font-weight: bold;
+        margin-right: 8px;
+      }
+      #otherLogotext{
+        float: left;
+        font-size: 16px;
+        position: absolute;
+        bottom: 0px;
+        left: 33%;
       }
     </style>
     <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -109,6 +128,13 @@
           <div id="logotext">用心前端</div>
         </div>
       </div> -->
+      <!-- <div class="row">
+        <div class="col-xs-2"></div>
+        <div class="col-xs-2">
+          <div id="otherLogo">JS</div>
+          <div id="otherLogotext">用心前端</div>
+        </div>
+      </div> -->
     </div>
       <div id="resume">
         <div class="container-fluid">
@@ -120,7 +146,7 @@
                 <div class="panel-body">
                   <div class="container-fluid">
                     <div class="row">
-                      <div class="col-md-9" style="color:#767676">
+                      <div class="col-xs-9" style="color:#767676">
                         <ul>
                           <li>我爱学习，我爱学习，我爱学习，我爱学习</li>
                           <li>我爱学习，我爱学习，我爱学习，我爱学习</li>
@@ -128,7 +154,7 @@
                           <li>我爱学习，我爱学习，我爱学习，我爱学习</li>
                         </ul>
                       </div>
-                      <div class="col-md-3">相片</div>
+                      <div class="col-xs-3">相片</div>
                     </div>
                   </div>
                 </div>
@@ -184,7 +210,7 @@
                   <p style="margin-top: 16px;"><span class="label label-default" style="font-size:18px">jquery</span></p>
                 </div> -->
               </div>
-            </div>            
+            </div>
           </div>
         </div>
       </div>
