--- a/index.html
+++ b/index.html
@@ -73,30 +73,29 @@
         bottom: 0px;
         width: 100%;
       } */
-      /* #logo{
-        height: 60px;
-        width: 60px;
-        line-height: 60px;
+      #logo{
+        height: 40px;
+        width: 40px;
+        line-height: 40px;
         text-align: center;
         font-weight: bold;
         font-size: 20px;
-        border: 4px solid #fff;
+        border: 3px solid #fff;
         margin-top: 9px;
         float: left;
-      } */
+      }
       #top{
-        height: 8%;
+        height: 60px;
         width: 100%;
         background-color: #2B3A42;
         color: #fff;
-        position: relative;
       }
       #logotext{
-        float: left;
-        line-height: 120px;
-        margin-left: 5px;
+        position: absolute;
+        left: 60px;
+        top: 32px;
       }
-      #otherLogo{
+      /* #otherLogo{
         float: left;
         border: 3px solid #fff;
         padding: 5%;
@@ -112,7 +111,7 @@
         position: absolute;
         bottom: 0px;
         left: 33%;
-      }
+      } */
     </style>
     <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
@@ -121,13 +120,13 @@
   </head>
   <body>
     <div id="top">
-      <!-- <div class="row">
+      <div class="row">
         <div class="col-xs-2"></div>
-        <div class="col-xs-2">
+        <div class="col-xs-10" style="position: relative;">
           <div id="logo">JS</div>
           <div id="logotext">用心前端</div>
         </div>
-      </div> -->
+      </div>
       <!-- <div class="row">
         <div class="col-xs-2"></div>
         <div class="col-xs-2">
