--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       }
       #logotext{
         position: absolute;
-        left: 60px;
+        left: 46px;
         top: 32px;
       }
       /* #otherLogo{
@@ -120,12 +120,10 @@
   </head>
   <body>
     <div id="top">
-      <div class="row">
-        <div class="col-xs-2"></div>
-        <div class="col-xs-10" style="position: relative;">
+        <div style="width:12%;float:left;">&nbsp;</div>
+        <div  style="position: relative;width:88%;float:left;">
           <div id="logo">JS</div>
           <div id="logotext">用心前端</div>
-        </div>
       </div>
       <!-- <div class="row">
         <div class="col-xs-2"></div>
