--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
       .row .col-md-3 .list-group-item{
         border:none;
       }
-      /* #top{
+       /* #top{
         background-color: #2B3A42;
         height: 80px;
         color: #fff;
         margin: 0 auto;
-      }
+      } */
       #foot{
         background-color: #2B3A42;
         color: #fff;
@@ -72,7 +72,10 @@
         position: fixed;
         bottom: 0px;
         width: 100%;
-      } */
+        font-size: 14px;
+        line-height: 250px;
+        text-align: center;
+      }
       #logo{
         height: 40px;
         width: 40px;
@@ -95,6 +98,18 @@
         left: 46px;
         top: 32px;
       }
+      .resumeLeft .list-group-item-success{
+        background: #2B3A42;
+        color: #fff;
+      }
+      .resumeLeft .list-group-item{
+        color: #fff;
+      }
+      .resumeLeft .list-group-item-info{
+        background: #fff;
+        color: #767676;
+      }
+      .resumeLeft
       /* #otherLogo{
         float: left;
         border: 3px solid #fff;
@@ -139,53 +154,52 @@
             <div class="col-xs-2"></div>
             <div class="col-md-5 resumeRight">
               <div class="panel panel-default">
-                <div class="panel-heading" style="background-color:#3c763"><h4>李棠寅</h4></div>
+                <div class="panel-heading" style="background-color:#2B3A42;color:#fff;">李棠寅</div>
                 <div class="panel-body">
                   <div class="container-fluid">
                     <div class="row">
                       <div class="col-xs-9" style="color:#767676">
                         <ul>
-                          <li>我爱学习，我爱学习，我爱学习，我爱学习</li>
-                          <li>我爱学习，我爱学习，我爱学习，我爱学习</li>
-                          <li>我爱学习，我爱学习，我爱学习，我爱学习</li>
-                          <li>我爱学习，我爱学习，我爱学习，我爱学习</li>
+                          <li>吃苦耐劳，喜欢加班。</li>
+                          <li>我爱学习，喜欢技术</li>
+                          <li>热爱生活，喜欢足球，电影</li>
                         </ul>
                       </div>
-                      <div class="col-xs-3">相片</div>
+                      <div class="col-xs-3">相片暂缺</div>
                     </div>
                   </div>
                 </div>
               </div>
               <div class="panel panel-default">
-                <div class="panel-heading">项目经历</div>
+                <div class="panel-heading" style="background-color:#2B3A42;color:#fff;">项目经历</div>
                 <div class="panel-body" style="color:#767676">
                   <ul>
-                    <li>广东爱唯视微信端公众号前端</li>
-                    <li>广东爱唯视微信端公众号前端</li>
-                    <li>广东爱唯视微信端公众号前端</li>
+                    <li>广东爱唯视微信端公众号前端(项目在线)</li>
+                    <li>广东爱唯视医院录入系统</li>
+                    <li>广东爱唯视视眼健康平台PC端</li>
                     <li>广东爱唯视微信端公众号前端</li>
                   </ul>
                 </div>
               </div>
               <div class="panel panel-default">
-                <div class="panel-heading">求职目标</div>
+                <div class="panel-heading" style="background-color:#2B3A42;color:#fff;">求职目标</div>
                 <div class="panel-body" style="color:#767676">
                     web前端工程师
                 </div>
               </div>
             </div>
-            <div class="col-md-2 resumeLeft">
+            <div class="col-md-3 resumeLeft">
               <div id="leftTop">
                   <ul class="list-group">
-                    <li class="list-group-item list-group-item-success" style="color:#333;">基本资料</li>
-                    <li class="list-group-item list-group-item-info">出生日期：--------</li>
+                    <li class="list-group-item list-group-item-success" style="color:#fff">基本资料</li>
+                    <li class="list-group-item list-group-item-info">出生日期:1986-11-23</li>
                     <li class="list-group-item list-group-item-info">电话：13128997421</li>
                     <li class="list-group-item list-group-item-info">邮箱：379463001@qq.com</li>
                   </ul>
               </div>
               <div id="leftCenter">
                 <ul class="list-group">
-                  <li class="list-group-item list-group-item-success" style="color:#333;">掌握技能</li>
+                  <li class="list-group-item list-group-item-success" style="color:#fff;">掌握技能</li>
                   <li class="list-group-item list-group-item-info">javascript（熟练）</li>
                   <li class="list-group-item list-group-item-info">jquery（熟练）</li>
                   <li class="list-group-item list-group-item-info">vue（熟练）</li>
@@ -201,15 +215,18 @@
               </div>
               <div id="leftFoot">
                 <ul class="list-group">
-                  <li class="list-group-item list-group-item-success" style="color:#333;">兴趣爱好</li>
-                  <li class="list-group-item list-group-item-info">我爱吃饭</li>
-                  <li class="list-group-item list-group-item-info">我爱吃饭</li>
-                  <li class="list-group-item list-group-item-info">我爱吃饭</li>
+                  <li class="list-group-item list-group-item-success" style="color:#fff;">兴趣爱好</li>
+                  <li class="list-group-item list-group-item-info">看书</li>
+                  <li class="list-group-item list-group-item-info">电影</li>
+                  <li class="list-group-item list-group-item-info">足球</li>
                 </ul>
-              </div>            
+              </div>
             </div>
           </div>
         </div>
+      </div>
+      <div id="foot">
+            本人简历@https://leetangyin.github.io/my.github.io/
       </div>
   </body>
 </html>
