--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
       </div> -->
     </div>
       <div id="resume">
-        <div class="container-fluid">
+        <div class="container-fluid" style="margin-bottom:35px;">
           <div class="row">
             <div class="col-xs-2"></div>
             <div class="col-md-5 resumeRight">
@@ -174,10 +174,9 @@
                 <div class="panel-heading" style="background-color:#2B3A42;color:#fff;">项目经历</div>
                 <div class="panel-body" style="color:#767676">
                   <ul>
-                    <li>广东爱唯视微信端公众号前端(项目在线)</li>
+                    <li>广东爱唯视健康平台微信公众号(项目在线)</li>
                     <li>广东爱唯视医院录入系统</li>
                     <li>广东爱唯视视眼健康平台PC端</li>
-                    <li>广东爱唯视微信端公众号前端</li>
                   </ul>
                 </div>
               </div>
