--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
               <div id="leftTop">
                   <ul class="list-group">
                     <li class="list-group-item list-group-item-success" style="color:#fff">基本资料</li>
-                    <li class="list-group-item list-group-item-info">出生日期:1986-11-23</li>
+                    <li class="list-group-item list-group-item-info">出生日期:199s6-11-23</li>
                     <li class="list-group-item list-group-item-info">电话：13128997421</li>
                     <li class="list-group-item list-group-item-info">邮箱：379463001@qq.com</li>
                   </ul>
