--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         height: 915px;
         width: 100%;
         color: #fff;
-        padding-top:40px;
+        padding-top:20px;
     }
     #otherComtentTop h5{
       text-align: center;
@@ -248,6 +248,10 @@
     text-align: left;
     text-indent: 50px;
   }
+  #otherComtentTop  #pcComtentLeftCenter .progress{
+      width: 75%;
+      margin: 0 10px 0 38px;
+    }
     </style>
     <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <!-- <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
