--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
     }
     #otherComtentTop{
         background: #3B627F;
-        height: 915px;
+        height: 1080px;
         width: 100%;
         color: #fff;
         padding-top:20px;
@@ -246,7 +246,7 @@
   }
   #otherComtentTop  #pcComtentLeftFoot p{
     text-align: left;
-    text-indent: 50px;
+    text-indent: 34px;
   }
   #otherComtentTop  #pcComtentLeftCenter .progress{
       width: 75%;
@@ -387,6 +387,16 @@
                             <div id="anheadsCulptureImg"></div>
                             <h5>李棠寅</h5>
                         </div>
+                        <div id="pcComtentLeftFoot">
+                          <h4 id="pcComtentLeftCenterH4"><span class="glyphicon glyphicon-user" aria-hidden="true" style="margin-right:10px"></span>个人资料</h4>
+                          <div style="margin-top: 16px;">
+                            <p style="text-indent:18px"><span class="glyphicon glyphicon-user" aria-hidden="true" style="margin-right:15px"></span>出生：------</p>
+                            <p style="text-indent:18px"><span class="glyphicon glyphicon-map-marker" aria-hidden="true" style="margin-right:15px"></span>地址:广东省深圳市</p>
+                            <p style="text-indent:18px"><span class="glyphicon glyphicon-earphone" aria-hidden="true" style="margin-right:15px"></span>电话：13128997421</p>
+                            <p style="text-indent:18px"><span class="glyphicon glyphicon-envelope" aria-hidden="true" style="margin-right:15px"></span>邮件：379463001@qq.com</p>
+
+                          </div>
+                        </div>
                         <div id="pcComtentLeftCenter">
                             <h4 id="pcComtentLeftCenterH4"><span class="glyphicon glyphicon-wrench" aria-hidden="true" style="margin-right:10px"></span>技能特长</h4>
                             <div id="speciality">
@@ -439,6 +449,17 @@
                               </ul>
                             </div>
                         </div>
+
+                        <div id="pcComtentLeftFoot">
+                          <h4 id="pcComtentLeftCenterH4"><span class="glyphicon glyphicon-cd" aria-hidden="true" style="margin-right:10px"></span>项目经历</h4>
+                          <div style="margin-top: 16px;">
+                            <p>广东爱唯视健康平台微信公众号</p>
+                            <p>广东爱唯视排号系统</p>
+                            <p>广东爱唯视眼镜店收银系统</p>
+                            <p>广东爱唯视医院录入系统</p>
+                            <p>广东爱唯视视眼健康平台PC端</p>
+                          </div>
+                        </div>
                         <div id="pcComtentLeftFoot">
                           <h4 id="pcComtentLeftCenterH4"><span class="glyphicon glyphicon-heart" aria-hidden="true" style="margin-right:10px"></span>兴趣爱好</h4>
                           <div style="margin-top: 16px; margin-bottom: 6px;">
@@ -449,17 +470,7 @@
                         </div>
                         </div>
                         <div id="pcComtentLeftFoot">
-                          <h4 id="pcComtentLeftCenterH4"><span class="glyphicon glyphicon-heart" aria-hidden="true" style="margin-right:10px"></span>项目经历</h4>
-                          <div style="margin-top: 16px;">
-                            <p>广东爱唯视健康平台微信公众号</p>
-                            <p>广东爱唯视排号系统</p>
-                            <p>广东爱唯视眼镜店收银系统</p>
-                            <p>广东爱唯视医院录入系统</p>
-                            <p>广东爱唯视视眼健康平台PC端</p>
-                          </div>
-                        </div>
-                        <div id="pcComtentLeftFoot">
-                          <h4 id="pcComtentLeftCenterH4"><span class="glyphicon glyphicon-heart" aria-hidden="true" style="margin-right:10px"></span>工作经历</h4>
+                          <h4 id="pcComtentLeftCenterH4"><span class="glyphicon glyphicon-plane" aria-hidden="true" style="margin-right:10px"></span>工作经历</h4>
                           <div style="margin-top: 16px;">
                             <p>2015年以前从事其他行业</p>
                             <p  2015-至今（从事web前端工作3年）</p>
