--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
     }
     #otherComtentTop{
         background: #3B627F;
-        height: 1080px;
+        height: 1190px;
         width: 100%;
         color: #fff;
         padding-top:20px;
@@ -394,7 +394,18 @@
                             <p style="text-indent:18px"><span class="glyphicon glyphicon-map-marker" aria-hidden="true" style="margin-right:15px"></span>地址:广东省深圳市</p>
                             <p style="text-indent:18px"><span class="glyphicon glyphicon-earphone" aria-hidden="true" style="margin-right:15px"></span>电话：13128997421</p>
                             <p style="text-indent:18px"><span class="glyphicon glyphicon-envelope" aria-hidden="true" style="margin-right:15px"></span>邮件：379463001@qq.com</p>
+                          </div>
+                        </div>
 
+
+
+                        <div id="pcComtentLeftFoot">
+                          <h4 id="pcComtentLeftCenterH4"><span class="glyphicon glyphicon-user" aria-hidden="true" style="margin-right:10px"></span>求职意向</h4>
+                          <div style="margin-top: 16px;">
+                            <p style="text-indent:18px"><span class="glyphicon glyphicon-hand-right" aria-hidden="true" style="margin-right:15px"></span>web前端工程师</p>
+                            <p style="text-indent:18px"><span class="glyphicon glyphicon-map-marker" aria-hidden="true" style="margin-right:15px"></span>深圳</p>
+                            <p style="text-indent:18px"><span class="glyphicon glyphicon-tasks" aria-hidden="true" style="margin-right:15px"></span>全职</p>
+                            <p style="text-indent:18px"><span class="glyphicon glyphicon-yen" aria-hidden="true" style="margin-right:15px"></span>6k-8k</p>
                           </div>
                         </div>
                         <div id="pcComtentLeftCenter">
@@ -461,6 +472,14 @@
                           </div>
                         </div>
                         <div id="pcComtentLeftFoot">
+                          <h4 id="pcComtentLeftCenterH4"><span class="glyphicon glyphicon-plane" aria-hidden="true" style="margin-right:10px"></span>工作经历</h4>
+                          <div style="margin-top: 16px;">
+                            <p>2015年以前从事其他行业</p>
+                            <p  2015-至今（从事web前端工作3年）</p>
+                            <p>广东爱唯视医疗科技有限公司</p>
+                          </div>
+                        </div>
+                        <div id="pcComtentLeftFoot">
                           <h4 id="pcComtentLeftCenterH4"><span class="glyphicon glyphicon-heart" aria-hidden="true" style="margin-right:10px"></span>兴趣爱好</h4>
                           <div style="margin-top: 16px; margin-bottom: 6px;">
                             <span class="label label-default">看书</span>
@@ -469,15 +488,6 @@
                             <span class="label label-default">足球</span>
                         </div>
                         </div>
-                        <div id="pcComtentLeftFoot">
-                          <h4 id="pcComtentLeftCenterH4"><span class="glyphicon glyphicon-plane" aria-hidden="true" style="margin-right:10px"></span>工作经历</h4>
-                          <div style="margin-top: 16px;">
-                            <p>2015年以前从事其他行业</p>
-                            <p  2015-至今（从事web前端工作3年）</p>
-                            <p>广东爱唯视医疗科技有限公司</p>
-                          </div>
-                        </div>
-
                         <!-- <div id="pcComtentLeftFoot">
                           <h4 id="pcComtentLeftCenterH4"><span class="glyphicon glyphicon-heart" aria-hidden="true" style="margin-right:10px"></span>工作经历</h4>
                           <div>
