--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                        <h4 id="myName">李棠寅</h4>
                      </dt>
                      <dd><span class="glyphicon glyphicon-user" aria-hidden="true" style="margin-right:15px"></span>出生：------</dd>
-                     <dd><span class="glyphicon glyphicon-map-marker" aria-hidden="true" style="margin-right:15px"></span>地址:广东省深圳市</dd>
+                     <dd><span class="glyphicon glyphicon-map-marker" aria-hidden="true" style="margin-right:15px"></span>地址：广东省深圳市</dd>
                      <dd><span class="glyphicon glyphicon-earphone" aria-hidden="true" style="margin-right:15px"></span>电话：13128997421</dd>
                      <dd><span class="glyphicon glyphicon-envelope" aria-hidden="true" style="margin-right:15px"></span>邮件：379463001@qq.com</dd>
                   </dl>
@@ -391,7 +391,7 @@
                           <h4 id="pcComtentLeftCenterH4"><span class="glyphicon glyphicon-user" aria-hidden="true" style="margin-right:10px"></span>个人资料</h4>
                           <div style="margin-top: 16px;">
                             <p style="text-indent:18px"><span class="glyphicon glyphicon-user" aria-hidden="true" style="margin-right:15px"></span>出生：------</p>
-                            <p style="text-indent:18px"><span class="glyphicon glyphicon-map-marker" aria-hidden="true" style="margin-right:15px"></span>地址:广东省深圳市</p>
+                            <p style="text-indent:18px"><span class="glyphicon glyphicon-map-marker" aria-hidden="true" style="margin-right:15px"></span>地址：广东省深圳市</p>
                             <p style="text-indent:18px"><span class="glyphicon glyphicon-earphone" aria-hidden="true" style="margin-right:15px"></span>电话：13128997421</p>
                             <p style="text-indent:18px"><span class="glyphicon glyphicon-envelope" aria-hidden="true" style="margin-right:15px"></span>邮件：379463001@qq.com</p>
                           </div>
