--- a/index.html
+++ b/index.html
@@ -61,9 +61,12 @@
       width: 1024px;
       margin: 0 auto;
       height: 500px;
-      margin-top:100px;
+      margin-top:80px;
     }
-
+    #pc{
+      padding-bottom: 50px;
+      min-height: 850px
+    }
     #pcComtentLeft{
       float: left;
       width: 324px;
