--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
       min-height: 60px;
       line-height: 60px;
       color: #888;
-      text-align: center;
+      text-align: left;
     }
     .pcComtentRightTitelContent p{
       height: 30px;
@@ -343,7 +343,7 @@
                 <dl>
                   <dt><span class="glyphicon glyphicon-bookmark" aria-hidden="true" style="color: #fff;background: #3B627F;font-size: 24px;text-align: center;line-height: 37px;height: 37px;width: 37px;border-radius: 50%;margin-right:10px;display:block;float:left;"></span><h3 class="pcComtentRightTitel">求职意向</h3>
                   </dt>
-                  <dd class="pcComtentRightTitelContent">
+                  <dd class="pcComtentRightTitelContent" style="padding-left:51px;">
                     <span class="glyphicon glyphicon-hand-right" aria-hidden="true" style="margin-right:10px"></span><span style="margin-right:42px">web前端工程师</span>
                     <span class="glyphicon glyphicon-tasks" aria-hidden="true" style="margin-right:10px"></span><span style="margin-right:42px">全职</span>
                     <span class="glyphicon glyphicon glyphicon-map-marker" aria-hidden="true" style="margin-right:10px"></span><span style="margin-right:42px">深圳</span>
