--- a/index.html
+++ b/index.html
@@ -271,8 +271,8 @@
                        <div id="headsCulptureImg">头像</div>
                        <h4 id="myName">李棠寅</h4>
                      </dt>
-                     <dd><span class="glyphicon glyphicon-user" aria-hidden="true" style="margin-right:15px"></span>出生：------</dd>
-                     <dd><span class="glyphicon glyphicon-map-marker" aria-hidden="true" style="margin-right:15px"></span>地址：广东省深圳市</dd>
+                     <!-- <dd><span class="glyphicon glyphicon-user" aria-hidden="true" style="margin-right:15px"></span>出生：</dd> -->
+                     <!-- <dd><span class="glyphicon glyphicon-map-marker" aria-hidden="true" style="margin-right:15px"></span>地址：广东省深圳市</dd> -->
                      <dd><span class="glyphicon glyphicon-earphone" aria-hidden="true" style="margin-right:15px"></span>电话：13128997421</dd>
                      <dd><span class="glyphicon glyphicon-envelope" aria-hidden="true" style="margin-right:15px"></span>邮件：379463001@qq.com</dd>
                   </dl>
@@ -359,20 +359,18 @@
                   </dd>
                 </dl>
                 <dl>
-                  <dt><span class="glyphicon glyphicon-bookmark" aria-hidden="true" style="color: #fff;background: #3B627F;font-size: 24px;text-align: center;line-height: 37px;height: 37px;width: 37px;border-radius: 50%;margin-right:10px;display:block;float:left;"></span><h3 class="pcComtentRightTitel">教育背景</h3></dt>
+                  <!-- <dt><span class="glyphicon glyphicon-bookmark" aria-hidden="true" style="color: #fff;background: #3B627F;font-size: 24px;text-align: center;line-height: 37px;height: 37px;width: 37px;border-radius: 50%;margin-right:10px;display:block;float:left;"></span><h3 class="pcComtentRightTitel">教育背景</h3></dt>
                   <dd class="pcComtentRightTitelContent" style="text-align:left;">
                     <p style="height:33px;line-height: 44px;">初中毕业高中没读完</p>
                     <p>IT技能全靠自学</p
                   </dd>
-                </dl>
+                </dl> -->
                 <dl>
                   <dt ><span class="glyphicon glyphicon-bookmark" aria-hidden="true" style="color: #fff;background: #3B627F;font-size: 24px;text-align: center;line-height: 37px;height: 37px;width: 37px;border-radius: 50%;margin-right:10px;display:block;float:left;"></span><h3 class="pcComtentRightTitel">项目经历</h3></dt>
                   <dd class="pcComtentRightTitelContent">
-                    <p style="height:33px;line-height: 44px;">广东爱唯视健康平台微信公众号</p>
-                    <p>广东爱唯视排号系统</p>
-                    <p>广东爱唯视眼镜店收银系统</p>
-                    <p>广东爱唯视医院录入系统</p>
-                    <p>广东爱唯视视眼健康平台PC端</p>
+                    <p style="height:33px;line-height: 44px;">广东爱唯视健康平台微信公众号(项目在线)http://www.eyesws.com/#/main</p>
+                    <p>广东爱唯视检查报告移动版(项目在线)http://sg.eyesws.com/report/</p>
+                    <p>广东爱唯视库存管理系统PC端(项目在线)http://store.test.eyesws.com/#!/login</p>
                   </dd>
                 </dl>
               </div>
@@ -393,15 +391,12 @@
                         <div id="pcComtentLeftFoot">
                           <h4 id="pcComtentLeftCenterH4"><span class="glyphicon glyphicon-user" aria-hidden="true" style="margin-right:10px"></span>个人资料</h4>
                           <div style="margin-top: 16px;">
-                            <p style="text-indent:18px"><span class="glyphicon glyphicon-user" aria-hidden="true" style="margin-right:15px"></span>出生：------</p>
-                            <p style="text-indent:18px"><span class="glyphicon glyphicon-map-marker" aria-hidden="true" style="margin-right:15px"></span>地址：广东省深圳市</p>
+                            <!-- <p style="text-indent:18px"><span class="glyphicon glyphicon-user" aria-hidden="true" style="margin-right:15px"></span>出生：------</p> -->
+                            <!-- <p style="text-indent:18px"><span class="glyphicon glyphicon-map-marker" aria-hidden="true" style="margin-right:15px"></span>地址：广东省深圳市</p> -->
                             <p style="text-indent:18px"><span class="glyphicon glyphicon-earphone" aria-hidden="true" style="margin-right:15px"></span>电话：13128997421</p>
                             <p style="text-indent:18px"><span class="glyphicon glyphicon-envelope" aria-hidden="true" style="margin-right:15px"></span>邮件：379463001@qq.com</p>
                           </div>
                         </div>
-
-
-
                         <div id="pcComtentLeftFoot">
                           <h4 id="pcComtentLeftCenterH4"><span class="glyphicon glyphicon-user" aria-hidden="true" style="margin-right:10px"></span>求职意向</h4>
                           <div style="margin-top: 16px;">
@@ -467,11 +462,9 @@
                         <div id="pcComtentLeftFoot">
                           <h4 id="pcComtentLeftCenterH4"><span class="glyphicon glyphicon-cd" aria-hidden="true" style="margin-right:10px"></span>项目经历</h4>
                           <div style="margin-top: 16px;">
-                            <p>广东爱唯视健康平台微信公众号</p>
-                            <p>广东爱唯视排号系统</p>
-                            <p>广东爱唯视眼镜店收银系统</p>
-                            <p>广东爱唯视医院录入系统</p>
-                            <p>广东爱唯视视眼健康平台PC端</p>
+                            <p>广东爱唯视健康平台微信公众号(项目在线)http://www.eyesws.com/#/main</p>
+                            <p>广东爱唯视检查报告移动版(项目在线)http://sg.eyesws.com/report/</p>
+                            <p>广东爱唯视库存管理系统PC端(项目在线)http://store.test.eyesws.com/#!/login</p>
                           </div>
                         </div>
                         <div id="pcComtentLeftFoot">
@@ -591,7 +584,6 @@
       }
     }
     init();
-
   }
 
 </script>
