--- a/index.html
+++ b/index.html
@@ -462,9 +462,12 @@
                         <div id="pcComtentLeftFoot">
                           <h4 id="pcComtentLeftCenterH4"><span class="glyphicon glyphicon-cd" aria-hidden="true" style="margin-right:10px"></span>项目经历</h4>
                           <div style="margin-top: 16px;">
-                            <p>广东爱唯视健康平台微信公众号(项目在线)http://www.eyesws.com/#/main</p>
-                            <p>广东爱唯视检查报告移动版(项目在线)http://sg.eyesws.com/report/</p>
-                            <p>广东爱唯视库存管理系统PC端(项目在线)http://store.test.eyesws.com/#!/login</p>
+                            <p>广东爱唯视健康平台微信公众号(项目在线)</p>
+                            <p>项目链接：http://www.eyesws.com/#/main</p>
+                            <p>广东爱唯视检查报告移动版(项目在线)</p>
+                            <p>项目链接：http://sg.eyesws.com/report/</p>
+                            <p>广东爱唯视库存管理系统PC端(项目在线)</p>
+                            <p>项目链接：http://store.test.eyesws.com/#!/login</p>
                           </div>
                         </div>
                         <div id="pcComtentLeftFoot">
