--- a/index.html
+++ b/index.html
@@ -70,14 +70,14 @@
     #pcComtentLeft{
       float: left;
       width: 324px;
-      height: 820px;
+      height: 895px;
       background: #3B627F;
       color: #fff;
     }
     #pcComtentRight{
       float: left;
       width: 700px;
-      height: 820px;
+      height: 895px;
       background: #EFEFEF;
       padding:  20px;
       padding-top:48px;
@@ -209,7 +209,7 @@
     }
     #otherComtentTop{
         background: #3B627F;
-        height: 1190px;
+        height: 1600px;
         width: 100%;
         color: #fff;
         padding-top:20px;
@@ -352,25 +352,37 @@
                 </dl>
                 <dl>
                   <dt style="margin-bottom:5px;"><span class="glyphicon glyphicon-bookmark" aria-hidden="true" style="color: #fff;background: #3B627F;font-size: 24px;text-align: center;line-height: 37px;height: 37px;width: 37px;border-radius: 50%;margin-right:10px;display:block;float:left;"></span><h3 class="pcComtentRightTitel">工作经历</h3></dt>
-                  <dd class="pcComtentRightTitelContent" style="text-align:left;">
+                  <dd class="pcComtentRightTitelContent" style="text-align:left;float:" >
                       <p style="color:#333;height:33px;line-height: 44px;">2015年以前从事其他行业</p>
                       <p  style="color:#333">2015-至今（从事web前端工作2年）</p>
                       <p>广东爱唯视医疗科技有限公司</p>
                   </dd>
                 </dl>
-                <dl>
+                <dl style="height:290px">
+                  <dt style="margin-bottom:5px;"><span class="glyphicon glyphicon-bookmark" aria-hidden="true" style="color: #fff;background: #3B627F;font-size: 24px;text-align: center;line-height: 37px;height: 37px;width: 37px;border-radius: 50%;margin-right:10px;display:block;float:left;"></span><h3 class="pcComtentRightTitel">工作经历</h3></dt>
+                  <dd class="pcComtentRightTitelContent" style="text-align:left;float:" >
+                      <p style="color:#333;height:33px;line-height: 44px">工作职责</p>
+                      <p  style="color:#333">进入爱唯视后，在公司的前端部门，负责网页开发，维护，优化。</p>
+                      <p  style="color:#333;">公司前期使用前端页面使用Jquery+bootstrap,后台页面用jqueryeasyui,开发工具是eplice。</p>
+                      <p  style="color:#333;">公司中期，单页应用新起，微信端页面使用weiui+vue.js,没有使用vue.js全家桶，公司架构师讨论vue生态不健全，路由自己写框架，后台页面jqueryeasyui</p>
+                      <p  style="color:#333;height:50px;line-height:34px;margin-top: 32px;">公司后期，基本使用vue.js全家桶，又重组公司项目，后台页面改为elemnet-ui+vue.js全家桶，微信端页面使用weiui+vue.js全家桶</p>
+                  </dd>
+                </dl>
                   <!-- <dt><span class="glyphicon glyphicon-bookmark" aria-hidden="true" style="color: #fff;background: #3B627F;font-size: 24px;text-align: center;line-height: 37px;height: 37px;width: 37px;border-radius: 50%;margin-right:10px;display:block;float:left;"></span><h3 class="pcComtentRightTitel">教育背景</h3></dt>
                   <dd class="pcComtentRightTitelContent" style="text-align:left;">
                     <p style="height:33px;line-height: 44px;">初中毕业高中没读完</p>
                     <p>IT技能全靠自学</p
                   </dd>
                 </dl> -->
-                <dl>
+                <dl style="clear:both;">
                   <dt ><span class="glyphicon glyphicon-bookmark" aria-hidden="true" style="color: #fff;background: #3B627F;font-size: 24px;text-align: center;line-height: 37px;height: 37px;width: 37px;border-radius: 50%;margin-right:10px;display:block;float:left;"></span><h3 class="pcComtentRightTitel">项目经历</h3></dt>
                   <dd class="pcComtentRightTitelContent">
                     <p style="height:33px;line-height: 44px;">广东爱唯视健康平台微信公众号(项目在线)http://www.eyesws.com/#/main</p>
-                    <p>广东爱唯视检查报告移动版(项目在线)http://sg.eyesws.com/report/</p>
-                    <p>广东爱唯视库存管理系统PC端(项目在线)http://store.test.eyesws.com/#!/login</p>
+                    <p>项目链接：http://www.eyesws.com/#/main</p>
+                    <p>广东爱唯视检查报告移动版(项目在线)</p>
+                    <p>项目链接：http://sg.eyesws.com/report/</p>
+                    <p>广东爱唯视库存管理系统PC端(项目在线)</p>
+                    <p>项目链接：http://store.test.eyesws.com/#!/login</p>
                   </dd>
                 </dl>
               </div>
@@ -397,6 +409,35 @@
                             <p style="text-indent:18px"><span class="glyphicon glyphicon-envelope" aria-hidden="true" style="margin-right:15px"></span>邮件：379463001@qq.com</p>
                           </div>
                         </div>
+
+
+                        <div id="pcComtentLeftFoot">
+                          <h4 id="pcComtentLeftCenterH4"><span class="glyphicon glyphicon-plane" aria-hidden="true" style="margin-right:10px"></span>工作经历</h4>
+                          <div style="margin-top: 16px;">
+                            <p>2015年以前从事其他行业</p>
+                            <p  2015-至今（从事web前端工作3年）</p>
+                            <p>广东爱唯视医疗科技有限公司</p>
+                          </div>
+                        </div>
+                        <div id="pcComtentLeftFoot">
+                          <h4 id="pcComtentLeftCenterH4"><span class="glyphicon glyphicon-plane" aria-hidden="true" style="margin-right:10px"></span>项目职责</h4>
+                          <div style="margin-top: 16px;text-align:left;padding: 0 37px;">
+                            进入爱唯视后，在公司的前端部门，负责网页开发，维护，优化。公司前期使用前端页面使用Jquery+bootstrap,后台页面用jqueryeasyui,开发工具是eplice。公司中期，单页应用新起，微信端页面使用weiui+vue.js,没有使用vue.js全家桶，公司架构师讨论vue生态不健全，路由自己写框架，后台页面jqueryeasyui，公司后期，基本使用vue.js全家桶，又重组公司项目，后台页面改为elemnet-ui+vue.js全家桶，微信端页面使用weiui+vue.js全家桶</p>
+                          </div>
+                        </div>
+
+                        <div id="pcComtentLeftFoot">
+                          <h4 id="pcComtentLeftCenterH4"><span class="glyphicon glyphicon-cd" aria-hidden="true" style="margin-right:10px"></span>项目经历</h4>
+                          <div style="margin-top: 16px;">
+                            <p>广东爱唯视健康平台微信公众号(项目在线)</p>
+                            <p>项目链接：http://www.eyesws.com/#/main</p>
+                            <p>广东爱唯视检查报告移动版(项目在线)</p>
+                            <p>项目链接：http://sg.eyesws.com/report/</p>
+                            <p>广东爱唯视库存管理系统PC端(项目在线)</p>
+                            <p>项目链接：http://store.test.eyesws.com/#!/login</p>
+                          </div>
+                        </div>
+
                         <div id="pcComtentLeftFoot">
                           <h4 id="pcComtentLeftCenterH4"><span class="glyphicon glyphicon-user" aria-hidden="true" style="margin-right:10px"></span>求职意向</h4>
                           <div style="margin-top: 16px;">
@@ -459,25 +500,6 @@
                             </div>
                         </div>
 
-                        <div id="pcComtentLeftFoot">
-                          <h4 id="pcComtentLeftCenterH4"><span class="glyphicon glyphicon-cd" aria-hidden="true" style="margin-right:10px"></span>项目经历</h4>
-                          <div style="margin-top: 16px;">
-                            <p>广东爱唯视健康平台微信公众号(项目在线)</p>
-                            <p>项目链接：http://www.eyesws.com/#/main</p>
-                            <p>广东爱唯视检查报告移动版(项目在线)</p>
-                            <p>项目链接：http://sg.eyesws.com/report/</p>
-                            <p>广东爱唯视库存管理系统PC端(项目在线)</p>
-                            <p>项目链接：http://store.test.eyesws.com/#!/login</p>
-                          </div>
-                        </div>
-                        <div id="pcComtentLeftFoot">
-                          <h4 id="pcComtentLeftCenterH4"><span class="glyphicon glyphicon-plane" aria-hidden="true" style="margin-right:10px"></span>工作经历</h4>
-                          <div style="margin-top: 16px;">
-                            <p>2015年以前从事其他行业</p>
-                            <p  2015-至今（从事web前端工作3年）</p>
-                            <p>广东爱唯视医疗科技有限公司</p>
-                          </div>
-                        </div>
                         <div id="pcComtentLeftFoot">
                           <h4 id="pcComtentLeftCenterH4"><span class="glyphicon glyphicon-heart" aria-hidden="true" style="margin-right:10px"></span>兴趣爱好</h4>
                           <div style="margin-top: 16px; margin-bottom: 6px;">
