--- a/index.html
+++ b/index.html
@@ -363,9 +363,9 @@
                   <dd class="pcComtentRightTitelContent" style="text-align:left;float:" >
                       <p style="color:#333;height:33px;line-height: 44px">工作职责</p>
                       <p  style="color:#333">进入爱唯视后，在公司的前端部门，负责网页开发，维护，优化。</p>
-                      <p  style="color:#333;">公司前期使用前端页面使用Jquery+bootstrap,后台页面用jqueryeasyui,开发工具是eplice。</p>
-                      <p  style="color:#333;">公司中期，单页应用新起，微信端页面使用weiui+vue.js,没有使用vue.js全家桶，公司架构师讨论vue生态不健全，路由自己写框架，后台页面jqueryeasyui</p>
-                      <p  style="color:#333;height:50px;line-height:34px;margin-top: 32px;">公司后期，基本使用vue.js全家桶，又重组公司项目，后台页面改为elemnet-ui+vue.js全家桶，微信端页面使用weiui+vue.js全家桶</p>
+                      <p  style="color:#333;">公司前期使用前端页面使用Jquery+bootstrap,后台页面用jqueryeasyui,开发工具是eclipse.</p>
+                      <p  style="color:#333;">公司中期，单页应用新起，微信端页面使用weiui+vue.js,没有使用vue.js全家桶，公司架构师讨论vue生态不健全，路由自己写框架，后台页面jqueryeasyui,前端开发工具Sublime</p>
+                      <p  style="color:#333;height:50px;line-height:34px;margin-top: 32px;">公司后期，基本使用vue.js全家桶，又重组公司项目，后台页面改为elemnet-ui+vue.js全家桶，微信端页面使用weiui+vue.js全家桶,开发工具Atom</p>
                   </dd>
                 </dl>
                   <!-- <dt><span class="glyphicon glyphicon-bookmark" aria-hidden="true" style="color: #fff;background: #3B627F;font-size: 24px;text-align: center;line-height: 37px;height: 37px;width: 37px;border-radius: 50%;margin-right:10px;display:block;float:left;"></span><h3 class="pcComtentRightTitel">教育背景</h3></dt>
@@ -410,7 +410,7 @@
                           </div>
                         </div>
 
-
+i
                         <div id="pcComtentLeftFoot">
                           <h4 id="pcComtentLeftCenterH4"><span class="glyphicon glyphicon-plane" aria-hidden="true" style="margin-right:10px"></span>工作经历</h4>
                           <div style="margin-top: 16px;">
@@ -422,7 +422,7 @@
                         <div id="pcComtentLeftFoot">
                           <h4 id="pcComtentLeftCenterH4"><span class="glyphicon glyphicon-plane" aria-hidden="true" style="margin-right:10px"></span>项目职责</h4>
                           <div style="margin-top: 16px;text-align:left;padding: 0 37px;">
-                            进入爱唯视后，在公司的前端部门，负责网页开发，维护，优化。公司前期使用前端页面使用Jquery+bootstrap,后台页面用jqueryeasyui,开发工具是eplice。公司中期，单页应用新起，微信端页面使用weiui+vue.js,没有使用vue.js全家桶，公司架构师讨论vue生态不健全，路由自己写框架，后台页面jqueryeasyui，公司后期，基本使用vue.js全家桶，又重组公司项目，后台页面改为elemnet-ui+vue.js全家桶，微信端页面使用weiui+vue.js全家桶</p>
+                            进入爱唯视后，在公司的前端部门，负责网页开发，维护，优化。公司前期使用前端页面使用Jquery+bootstrap,后台页面用jqueryeasyui,开发工具是eclipse。公司中期，单页应用新起，微信端页面使用weiui+vue.js,没有使用vue.js全家桶，公司架构师讨论vue生态不健全，路由自己写框架，后台页面jqueryeasyui,前端开发工具Sublime，公司后期，基本使用vue.js全家桶，又重组公司项目，后台页面改为elemnet-ui+vue.js全家桶，微信端页面使用weiui+vue.js全家桶</p>,前端开发工Atom
                           </div>
                         </div>
 
