--- a/index.html
+++ b/index.html
@@ -268,8 +268,8 @@
                 <div id="pcComtentLeftTop">
                   <dl>
                      <dt>
-                       <div id="headsCulptureImg">头像</div>
-                       <h4 id="myName">李棠寅</h4>
+                       <div id="headsCulptureImg">骨头像</div>
+                       <h4 id="myName">我是死鬼蔡凯特</h4>
                      </dt>
                      <!-- <dd><span class="glyphicon glyphicon-user" aria-hidden="true" style="margin-right:15px"></span>出生：</dd> -->
                      <!-- <dd><span class="glyphicon glyphicon-map-marker" aria-hidden="true" style="margin-right:15px"></span>地址：广东省深圳市</dd> -->
