--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
     *{
         margin: 0px;
         padding: 0px;
-
     }
     a{
         text-decoration: none;
@@ -61,7 +60,6 @@
       width: 1024px;
       margin: 0 auto;
       height: 500px;
-      margin-top:80px;
     }
     #pc{
       padding-bottom: 50px;
@@ -136,7 +134,6 @@
     #speciality{
     /* padding:0 50px; */
     }
-
     #pcComtentLeftCenter .progress{
       width: 200px;
       float: left;
@@ -190,7 +187,6 @@
       width: 100%;
       height: 100%
     }
-
     /* #otherComtent .col-xs-5{
       height: 100%;
       background: #3B627F;
@@ -230,7 +226,6 @@
       margin: 0 auto;
     }
     #otherComtentLeftCenter{
-
     }
     #otherComtentTop #pcComtentLeftCenterH4{
       text-align: left;
@@ -261,7 +256,7 @@
   </head>
   <body>
     <div>
-        <div id="pc">
+        <div id="pc" style="margin-top: 60px">
             <div id="pcTopt"></div>
             <div id="pcComtent">
               <div id="pcComtentLeft">
@@ -341,31 +336,29 @@
               </div>
               <div id="pcComtentRight">
                 <dl>
-                  <dt><span class="glyphicon glyphicon-bookmark" aria-hidden="true" style="color: #fff;background: #3B627F;font-size: 24px;text-align: center;line-height: 37px;height: 37px;width: 37px;border-radius: 50%;margin-right:10px;display:block;float:left;"></span><h3 class="pcComtentRightTitel">求职意向</h3>
+                  <dt><span class="glyphicon glyphicon-bookmark" aria-hidden="true" style="color: #fff;background: #3B627F;font-size: 24px;text-align: center;line-height: 37px;height: 37px;width: 37px;border-radius: 50%;margin-right:10px;display:block;float:left;"></span><h3 class="pcComtentRightTitel">求职意向<span style="display: inline-block; float: right;font-size: 12px; color: #3B627F;">访问<a href="http://bluelee888.cn">http://bluelee888.cn/</a>查看个人简历</span></h3>
                   </dt>
                   <dd class="pcComtentRightTitelContent" style="padding-left:47px;">
-                    <span class="glyphicon glyphicon-hand-right" aria-hidden="true" style="margin-right:10px"></span><span style="margin-right:42px">web前端工程师</span>
+                    <span class="glyphicon glyphicon-hand-right" aria-hidden="true" style="margin-right:10px"></span><span style="margin-right:42px">信利</span>
                     <span class="glyphicon glyphicon-tasks" aria-hidden="true" style="margin-right:10px"></span><span style="margin-right:42px">全职</span>
-                    <span class="glyphicon glyphicon glyphicon-map-marker" aria-hidden="true" style="margin-right:10px"></span><span style="margin-right:42px">深圳</span>
-                    <span class="glyphicon glyphicon glyphicon-yen" aria-hidden="true" style="margin-right:10px"></span><span style="margin-right:42px">6k-8k</span>
+<!--                     <span class="glyphicon glyphicon glyphicon-map-marker" aria-hidden="true" style="margin-right:10px"></span><span style="margin-right:42px">汕尾</span>
+                    <span class="glyphicon glyphicon glyphicon-yen" aria-hidden="true" style="margin-right:10px"></span><span style="margin-right:42px">6k-8k</span> -->
                   </dd>
                 </dl>
                 <dl>
                   <dt style="margin-bottom:5px;"><span class="glyphicon glyphicon-bookmark" aria-hidden="true" style="color: #fff;background: #3B627F;font-size: 24px;text-align: center;line-height: 37px;height: 37px;width: 37px;border-radius: 50%;margin-right:10px;display:block;float:left;"></span><h3 class="pcComtentRightTitel">工作经历</h3></dt>
                   <dd class="pcComtentRightTitelContent" style="text-align:left;float:" >
-                      <p style="color:#333;height:33px;line-height: 44px;">2015年以前从事其他行业</p>
-                      <p  style="color:#333">2015-至今（从事web前端工作2年）</p>
-                      <p>广东爱唯视医疗科技有限公司</p>
+                  <p  style="color:#333">2015（以前从事其他工作）</p>
+                      <p  style="color:#333">2015-2017（广东爱唯视医疗科技有限公司）</p>
+                      <p  style="color:#333">2017-2018（深圳市仕瑞达自动化设备有限公司）</p>
                   </dd>
                 </dl>
-                <dl style="height:290px">
+                <dl style="height: 170px">
                   <dt style="margin-bottom:5px;"><span class="glyphicon glyphicon-bookmark" aria-hidden="true" style="color: #fff;background: #3B627F;font-size: 24px;text-align: center;line-height: 37px;height: 37px;width: 37px;border-radius: 50%;margin-right:10px;display:block;float:left;"></span><h3 class="pcComtentRightTitel">工作经历</h3></dt>
                   <dd class="pcComtentRightTitelContent" style="text-align:left;float:" >
                       <p style="color:#333;height:33px;line-height: 44px">工作职责</p>
                       <p  style="color:#333">进入爱唯视后，在公司的前端部门，负责网页开发，维护，优化。</p>
-                      <p  style="color:#333;">公司前期使用前端页面使用Jquery+bootstrap,后台页面用jqueryeasyui,开发工具是eclipse.</p>
-                      <p  style="color:#333;">公司中期，单页应用新起，微信端页面使用weiui+vue.js,没有使用vue.js全家桶，公司架构师讨论vue生态不健全，路由自己写框架，后台页面jqueryeasyui,前端开发工具Sublime</p>
-                      <p  style="color:#333;height:50px;line-height:34px;margin-top: 32px;">公司后期，基本使用vue.js全家桶，又重组公司项目，后台页面改为elemnet-ui+vue.js全家桶，微信端页面使用weiui+vue.js全家桶,开发工具Atom</p>
+                      <p  style="color:#333">仕瑞达，在公司的前端部门，负责网页，系统，产品需求，开发，维护，优化。推进前后端协同开发，产品的更新迭代</p>
                   </dd>
                 </dl>
                   <!-- <dt><span class="glyphicon glyphicon-bookmark" aria-hidden="true" style="color: #fff;background: #3B627F;font-size: 24px;text-align: center;line-height: 37px;height: 37px;width: 37px;border-radius: 50%;margin-right:10px;display:block;float:left;"></span><h3 class="pcComtentRightTitel">教育背景</h3></dt>
@@ -377,12 +370,14 @@
                 <dl style="clear:both;">
                   <dt ><span class="glyphicon glyphicon-bookmark" aria-hidden="true" style="color: #fff;background: #3B627F;font-size: 24px;text-align: center;line-height: 37px;height: 37px;width: 37px;border-radius: 50%;margin-right:10px;display:block;float:left;"></span><h3 class="pcComtentRightTitel">项目经历</h3></dt>
                   <dd class="pcComtentRightTitelContent">
-                    <p style="height:33px;line-height: 44px;">广东爱唯视健康平台微信公众号(项目在线)http://www.eyesws.com/#/main</p>
-                    <p>项目链接：http://www.eyesws.com/#/main</p>
-                    <p>广东爱唯视检查报告移动版(项目在线)</p>
-                    <p>项目链接：http://sg.eyesws.com/report/</p>
-                    <p>广东爱唯视库存管理系统PC端(项目在线)</p>
-                    <p>项目链接：http://store.test.eyesws.com/#!/login</p>
+                    <h5 style="font-weight: bold;padding-top: 20px;padding-left: 35px;">广东爱唯视医疗科技有限公司（在线项目）</h5>
+                    <p>http://www.eyesws.com/#/main(微信公众号)</p>
+                    <p>http://sg.eyesws.com/report/（检查报告移动版）</p>
+                    <p>http://store.test.eyesws.com/#!/login（存管理系统）</p>
+                    <h5 style="font-weight: bold;padding-top: 20px;padding-left: 35px;">深圳市仕瑞达自动化设备有限公司（在线项目）</h5>
+                    <p>http://www.srdfaa.com/(深圳市创芯人官网)</p>
+                    <p>http://www.cxrgc.com/（深圳市仕瑞达官网）</p>
+                    <p>http://mes.cxrgc.com:81/login（创芯工厂系统）</p>
                   </dd>
                 </dl>
               </div>
@@ -410,7 +405,6 @@
                           </div>
                         </div>
 
-i
                         <div id="pcComtentLeftFoot">
                           <h4 id="pcComtentLeftCenterH4"><span class="glyphicon glyphicon-plane" aria-hidden="true" style="margin-right:10px"></span>工作经历</h4>
                           <div style="margin-top: 16px;">
@@ -425,16 +419,13 @@ i
                             进入爱唯视后，在公司的前端部门，负责网页开发，维护，优化。公司前期使用前端页面使用Jquery+bootstrap,后台页面用jqueryeasyui,开发工具是eclipse。公司中期，单页应用新起，微信端页面使用weiui+vue.js,没有使用vue.js全家桶，公司架构师讨论vue生态不健全，路由自己写框架，后台页面jqueryeasyui,前端开发工具Sublime，公司后期，基本使用vue.js全家桶，又重组公司项目，后台页面改为elemnet-ui+vue.js全家桶，微信端页面使用weiui+vue.js全家桶</p>,前端开发工Atom
                           </div>
                         </div>
-
                         <div id="pcComtentLeftFoot">
                           <h4 id="pcComtentLeftCenterH4"><span class="glyphicon glyphicon-cd" aria-hidden="true" style="margin-right:10px"></span>项目经历</h4>
                           <div style="margin-top: 16px;">
-                            <p>广东爱唯视健康平台微信公众号(项目在线)</p>
-                            <p>项目链接：http://www.eyesws.com/#/main</p>
-                            <p>广东爱唯视检查报告移动版(项目在线)</p>
-                            <p>项目链接：http://sg.eyesws.com/report/</p>
-                            <p>广东爱唯视库存管理系统PC端(项目在线)</p>
-                            <p>项目链接：http://store.test.eyesws.com/#!/login</p>
+                            <h5>广东爱唯视医疗科技有限公司</h5>
+                            <p>http://www.eyesws.com/#/main(微信公众号)</p>
+                            <p>http://sg.eyesws.com/report/（检查报告移动版）</p>
+                            <p>http://store.test.eyesws.com/#!/login（存管理系统）</p>
                           </div>
                         </div>
 
@@ -546,7 +537,6 @@ i
     var other = document.getElementById('other');
     var otherComtent = document.getElementById('otherComtent');
     var bodyHeight = document.body.clientHeight;
-
     var browser = {
         versions: function () {
             var u = navigator.userAgent, app = navigator.appVersion;
@@ -565,7 +555,6 @@ i
         }(),
         language: (navigator.browserLanguage || navigator.language).toLowerCase()
     }
-
     function initEntry(){
       var initType;
       if (browser.versions.mobile) {//判断是否是移动设备打开。browser代码在下面
@@ -610,5 +599,4 @@ i
     }
     init();
   }
-
 </script>
